--- a/Views/LoginView.xaml
+++ b/Views/LoginView.xaml
@@ -14,101 +14,106 @@
     <UserControl.Resources>
 
         <converters:LengthToVisibilityConverter x:Key="LengthToVisibilityConverter"/>
-
+        <Style TargetType="Button" x:Key="ButtonStyle">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Width" Value="60"/>
+            <Setter Property="Height" Value="35"/>
+        </Style>
 
     </UserControl.Resources>
-    <Grid HorizontalAlignment="Center">
+    <TabControl>
+        <TabItem Header="Login">
+            <Grid HorizontalAlignment="Center">
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
 
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="Caliburn Playground" Grid.ColumnSpan="2" FontSize="30" FontWeight="DemiBold" Margin="20"/>
-        <TextBlock Grid.Row="1" Width="60" Text="Username" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-        <!--<TextBlock Text="Enter your username.." Style="{StaticResource Placeholder}"
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Caliburn Playground" Grid.ColumnSpan="2" FontSize="30" FontWeight="DemiBold" Margin="20"/>
+                <TextBlock Grid.Row="1" Width="60" Text="Username" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <!--<TextBlock Text="Enter your username.." Style="{StaticResource Placeholder}"
                    Grid.Row="1" Grid.Column="1" 
                    HorizontalAlignment="Left" Margin="37 0 0 0"
                    VerticalAlignment="Center"
                    />-->
-        <TextBox x:Name="Username" Grid.Row="1" Grid.Column="1" Width="150" Height="30" Margin="5" Padding="5" />
-        <TextBlock Grid.Row="2" Width="60" Text="Password" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-        <TextBox x:Name="Password" Grid.Row="2" Grid.Column="1" Width="150" Height="30" Margin="5" Padding="5" />
-        <!--<Button Grid.Row="3" Grid.Column="1" Height="25" Width="80" Content="Log in"
+                <TextBox x:Name="Username" Grid.Row="1" Grid.Column="1" Width="150" Height="30" Margin="5" Padding="5" />
+                <TextBlock Grid.Row="2" Width="60" Text="Password" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <TextBox x:Name="Password" Grid.Row="2" Grid.Column="1" Width="150" Height="30" Margin="5" Padding="5" />
+                <!--<Button Grid.Row="3" Grid.Column="1" Height="25" Width="80" Content="Log in"
                 cal:Message.Attach="[Event Click]=[Action Login($view)]" />-->
-        <!--<custom:IconButton Grid.Column="1" Grid.Row="3" Height="25" Width="100" Content="Log in" IconSource="/Images/app_icon.png"
+                <!--<custom:IconButton Grid.Column="1" Grid.Row="3" Height="25" Width="100" Content="Log in" IconSource="/Images/app_icon.png"
                 x:Name="Login"/>-->
-        <ComboBox Grid.Row="4" HorizontalAlignment="Left" x:Name="MultiComboBox" IsReadOnly="True" mah:TextBoxHelper.Watermark="Choose multiple options" Width="200" ItemsSource="{Binding Persons}" DisplayMemberPath="Name" Grid.RowSpan="2">
-            <ComboBox.Style>
-                <Style TargetType="ComboBox">
-                    <Setter Property="OverridesDefaultStyle" Value="True"/>
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="ComboBox">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
+                <ComboBox Grid.Row="4" HorizontalAlignment="Left" x:Name="MultiComboBox" IsReadOnly="True" mah:TextBoxHelper.Watermark="Choose multiple options" Width="200" ItemsSource="{Binding Persons}" DisplayMemberPath="Name" Grid.RowSpan="2">
+                    <ComboBox.Style>
+                        <Style TargetType="ComboBox">
+                            <Setter Property="OverridesDefaultStyle" Value="True"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ComboBox">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
 
-                                    <TextBox x:Name="ComboTextBox"  Text="{Binding ElementName=Options,Path=SelectedItemsStringFormat}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="{TemplateBinding Width}" MaxLines="3" Height="auto" TextWrapping="Wrap"/>
+                                            <TextBox x:Name="ComboTextBox"  Text="{Binding ElementName=Options,Path=SelectedItemsStringFormat}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="{TemplateBinding Width}" MaxLines="3" Height="auto" TextWrapping="Wrap"/>
 
-                                    <ToggleButton Name="HiddenToggle" Focusable="False" IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" ClickMode="Press" Grid.ColumnSpan="2" Background="Transparent"/>
+                                            <ToggleButton Name="HiddenToggle" Focusable="False" IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" ClickMode="Press" Grid.ColumnSpan="2" Background="Transparent"/>
 
-                                    <ToggleButton x:Name="ToggleButton" Grid.Column="1" Focusable="False" Width="15" Height="Auto" IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"  Style="{StaticResource ComboBoxToggleButton}"/>
+                                            <ToggleButton x:Name="ToggleButton" Grid.Column="1" Focusable="False" Width="15" Height="Auto" IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"  Style="{StaticResource ComboBoxToggleButton}"/>
 
-                                    <Popup Name="OptionsPopup" IsOpen="{TemplateBinding IsDropDownOpen}"  HorizontalAlignment="Center" VerticalAlignment="Center" PopupAnimation="Slide" PlacementTarget="{Binding ElementName=ComboTextBox}"  Width="{Binding Path=ActualWidth,RelativeSource={RelativeSource TemplatedParent}}">
+                                            <Popup Name="OptionsPopup" IsOpen="{TemplateBinding IsDropDownOpen}"  HorizontalAlignment="Center" VerticalAlignment="Center" PopupAnimation="Slide" PlacementTarget="{Binding ElementName=ComboTextBox}"  Width="{Binding Path=ActualWidth,RelativeSource={RelativeSource TemplatedParent}}">
 
-                                        <custom:CustomListBox x:Name="Options" BorderBrush="Gray" BorderThickness="1" IsTextSearchEnabled="True" ItemsSource="{Binding Path=ItemsSource,RelativeSource={RelativeSource TemplatedParent}}" DisplayMemberPath="{Binding Path=DisplayMemberPath,RelativeSource={RelativeSource TemplatedParent}}" SelectionMode="Multiple" GenerateSelectedItemsStringFormat="True" ItemSeperator=";" SelectedItems="{Binding Items,UpdateSourceTrigger=PropertyChanged,Mode=OneWayToSource}" >
-                                            <custom:CustomListBox.ItemContainerStyle>
-                                                <Style TargetType="ListBoxItem">
-                                                    <Setter Property="Template">
-                                                        <Setter.Value>
-                                                            <ControlTemplate TargetType="ListBoxItem">
-                                                                <CheckBox Name="Checkbox" Margin="3 3 1 3">
-                                                                    <ContentPresenter IsHitTestVisible="False"/>
-                                                                </CheckBox>
-                                                                <ControlTemplate.Triggers>
-                                                                    <Trigger SourceName="Checkbox" Property="IsChecked" Value="True">
-                                                                        <Setter Property="IsSelected" Value="True"/>
-                                                                    </Trigger>
-                                                                </ControlTemplate.Triggers>
-                                                            </ControlTemplate>
-                                                        </Setter.Value>
-                                                    </Setter>
-                                                </Style>
-                                            </custom:CustomListBox.ItemContainerStyle>
-                                        </custom:CustomListBox>
+                                                <custom:CustomListBox x:Name="Options" BorderBrush="Gray" BorderThickness="1" IsTextSearchEnabled="True" ItemsSource="{Binding Path=ItemsSource,RelativeSource={RelativeSource TemplatedParent}}" DisplayMemberPath="{Binding Path=DisplayMemberPath,RelativeSource={RelativeSource TemplatedParent}}" SelectionMode="Multiple" GenerateSelectedItemsStringFormat="True" ItemSeperator=";" SelectedItems="{Binding Items,UpdateSourceTrigger=PropertyChanged,Mode=OneWayToSource}" >
+                                                    <custom:CustomListBox.ItemContainerStyle>
+                                                        <Style TargetType="ListBoxItem">
+                                                            <Setter Property="Template">
+                                                                <Setter.Value>
+                                                                    <ControlTemplate TargetType="ListBoxItem">
+                                                                        <CheckBox Name="Checkbox" Margin="3 3 1 3">
+                                                                            <ContentPresenter IsHitTestVisible="False"/>
+                                                                        </CheckBox>
+                                                                        <ControlTemplate.Triggers>
+                                                                            <Trigger SourceName="Checkbox" Property="IsChecked" Value="True">
+                                                                                <Setter Property="IsSelected" Value="True"/>
+                                                                            </Trigger>
+                                                                        </ControlTemplate.Triggers>
+                                                                    </ControlTemplate>
+                                                                </Setter.Value>
+                                                            </Setter>
+                                                        </Style>
+                                                    </custom:CustomListBox.ItemContainerStyle>
+                                                </custom:CustomListBox>
 
-                                    </Popup>
+                                            </Popup>
 
-                                </Grid>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ComboBox.Style>
-        </ComboBox>
+                                        </Grid>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ComboBox.Style>
+                </ComboBox>
+                <ListBox Grid.Row="6" Grid.Column="1" BorderBrush="Gray" BorderThickness="1" Margin="10" ItemsSource="{Binding Items}" />
 
 
-        <ListBox Grid.Row="6" BorderBrush="Gray" BorderThickness="1" Margin="10" ItemsSource="{Binding Items}" />
 
-        
-        
-        
 
-   
-        <!--<Expander Grid.Row="4"> 
+
+
+                <!--<Expander Grid.Row="4"> 
             <Expander.Header>
                 <TextBlock Name="ExpanderContent" Text="{Binding ElementName=List,Path=SelectedItem.Content}"/>
             </Expander.Header>
@@ -124,6 +129,22 @@
 
 
 
-        <!--<TextBox Grid.Row="4"/>-->
-    </Grid>
+                <!--<TextBox Grid.Row="4"/>-->
+            </Grid>
+        </TabItem>
+        <TabItem Header="Task Space">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                    <Button x:Name="Start" Style="{StaticResource ButtonStyle}" Content="Start"/>
+                    <Button x:Name="StartAsync" Style="{StaticResource ButtonStyle}" Content="Start Async"/>
+                </StackPanel>
+
+                <TextBox Grid.Row="1" Text="{Binding OutputText}" HorizontalAlignment="Stretch"/>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </UserControl>
